# raknet-python

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.remote-dev  LICENSE  README.md  conanfile.py  pyproject.toml
.github/workflows/: build.yml  release.yml  windows.yml
docs/: conf.py  index.rst
include/: rak_peer.h  raknet_error.h
python/raknet/: __init__.py  __init__.pyi  _raknet.pyi
python/src/raknet/: __init__.py  __init__.pyi
raknet/: conandata.yml  conanfile.py
raknet/patches/: 4.081-0001-fix-static-lib-cmake.patch  4.081-0002-fix-shared-lib-cmake.patch  4.081-0003-fix-source.patch  4.081-0003-remove-register-specifier.patch  4.081-0004-rak-peer-options.patch
raknet/test_package/: CMakeLists.txt  test_package.cpp
samples/: ping.py
src/: rak_peer.cpp  raknet_error.cpp  raknet_python.cpp
tests/: test_connect_and_receive.py  test_connection.py  test_create_rak_peer.py  test_echo.py  test_imports.py  test_offline_ping.py  test_protocol_version.py  test_rak_peer.py  test_server_client.py
