[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "raknet"
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" }
]
description = "Python bindings for the RakNet networking library"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["python", "raknet", "network"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = []
dynamic = ["version"]

[project.urls]
#Changelog = "https://raknet.readthedocs.io/en/latest/changelog.html"
Documentation = "https://raknet-python.readthedocs.io"
Homepage = "https://github.com/raknet-python/raknet-python"
Issues = "https://github.com/raknet-python/raknet-python/issues"

[tool.scikit-build]
cmake.args = ["-G Ninja", "--preset conan-release"]
wheel.packages = ["python/raknet"]
wheel.license-files = ["LICENSE"]
install.components = ["python"]
install.strip = false

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "conanfile.py"

[tool.cibuildwheel]
skip = ["*-win32", "*-musllinux_x86_64", "*_i686"]
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-build = [
    "pip install conan",
    "conan profile detect --force",
    "conan export raknet --version 4.081",
    "conan install . --build=missing -c tools.cmake.cmaketoolchain:generator=Ninja"
]

[tool.cibuildwheel.linux]
before-build = [
    "pip install conan ninja",
    "conan profile detect --force",
    "conan export raknet --version 4.081",
    "conan install . --build=missing -c tools.cmake.cmaketoolchain:generator=Ninja"
]